--- a/style.css
+++ b/style.css
@@ -3,6 +3,24 @@
     src: url("media/ModernDOS8x16.ttf");
 }
 
-body {
+html {
     font-family: "ModernDOS8x16";
+}
+
+body {
+	background-color: #111111;
+	color: #43D610;
+	margin: 2em auto;
+	padding: 0 2em;
+	max-width: 47em;
+	line-height: 1.6;
+	text-align: justify;
+	overflow: auto;
+}
+
+h1 {
+	border-style: solid;
+	border-width: 7px;
+	border-color: #222222 #050505 #050505 #222222;
+        text-align: center;
 }
