--- a/style.css
+++ b/style.css
@@ -24,3 +24,16 @@ h1 {
 	border-color: #222222 #050505 #050505 #222222;
         text-align: center;
 }
+
+a {
+    color: grey;
+    transition: color 0.4s ease;
+}
+
+a:hover {
+    color: lightgrey;
+}
+
+p {
+    color: grey;
+}
